--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>Integra Prime - Gestão de eSocial e SST</title>
-    <meta name="description" content="Integra Prime Project" />
+    <meta name="description" content="Integra Prime" />
     <meta name="author" content="Integra Prime" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Integra Prime - Gestão de eSocial e SST" />
-    <meta property="og:description" content="Integra Prime Project" />
+    <meta property="og:description" content="Integra Prime" />
     <meta property="og:type" content="website" />
    </head>
 
